fix(#900): Add missing aria-labels Add hasOverflowScroll to pageSections in JMX and Quartz.

--- a/packages/hawtio/src/plugins/jmx/JmxContent.css
+++ b/packages/hawtio/src/plugins/jmx/JmxContent.css
@@ -1,3 +1,6 @@
 #jmx-content-main > article {
   overflow: auto;
 }
+#jmx-content {
+  height: 100%;
+}
